--- a/api/config/config.json
+++ b/api/config/config.json
@@ -4,14 +4,14 @@
     "password": "root",
     "database": "projetoweb",
     "host": "127.0.0.1",
-    "dialect": "postgresql"
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgresql"
   },
   "production": {
     "username": "root",
